--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,14 +2,40 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+        <link rel="icon" href="fever-logo.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta
             name="description"
-            content="Web site created using create-react-app"
+            content="Fever Boards || Boards, Clothing, Stickers"  />   <!--  FILL IN DESCRIPTION -->
+        <link rel="apple-touch-icon" href="fever-logo.png" />
+
+        <meta
+        name="keywords"
+        content="
+        "
+      />
+
+
+
+
+
+
+
+
+        <meta name="robots" content="index, follow" />
+
+        <!--  -->
+        <meta property="og:locale" content="en_GB" />
+        <meta property="og:type" content="website" />
+        <meta
+          property="og:title"
+          content="Fever Boards || Boards, Clothing, Stickers"
         />
-        <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+        <meta property="og:url" content="https://fill this in" />   <!--  FILL IN WEB ADDRESS -->
+        <meta
+          property="og:description"
+          content=" "  />    <!--  FILL IN BRIEF DESCRIPTION -->
         <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +50,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>Fever eCommerce</title>
+        <title>Fever Boards</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
